--- a/Clase 2/package.json
+++ b/Clase 2/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
-    "express-handlebars": "^8.0.1"
+    "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
