--- a/Clase 3/src/package.json
+++ b/Clase 3/src/package.json
@@ -12,6 +12,7 @@
   "author": "Nicolas D. Cabrera",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "express": "^4.19.2",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.0",
