--- a/Clase 3/src/package.json
+++ b/Clase 3/src/package.json
@@ -16,7 +16,8 @@
     "express": "^4.19.2",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.0",
-    "mongoose": "^8.5.3"
+    "mongoose": "^8.5.3",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
