--- a/Clase 4/src/package.json
+++ b/Clase 4/src/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
-    "cookie-parser": "^1.4.6"
+    "passport": "^0.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
