--- a/Clase 4/src/package.json
+++ b/Clase 4/src/package.json
@@ -12,14 +12,19 @@
   "author": "Nicolas D. Cabrera",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
