--- a/Segunda entrega/package.json
+++ b/Segunda entrega/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "3-entrega-de-proyecto-final",
+  "name": "primera-entrega",
   "version": "1.0.0",
-  "description": "Servidor que contiene endpoints y servicios necesarios para gestionar los productos y carritos de compra en el e-commerce​.",
+  "description": "Primera entrega del curso backend 2",
   "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js"
+    "start": "nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "Nicolas D. Cabrera",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.19.2",
-    "express-handlebars": "^7.1.3",
-    "mongoose": "^8.5.1",
-    "mongoose-aggregate-paginate-v2": "^1.1.2",
-    "mongoose-paginate-v2": "^1.8.3",
-    "socket.io": "^4.7.5",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "jsonwebtoken": "^9.0.2",
+   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
-    "bcrypt": "^5.1.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
+    "express": "^4.19.2",
+    "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1",
+    "nodemon": "^3.1.4",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   }
 }
