--- a/Segunda entrega/package.json
+++ b/Segunda entrega/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "primera-entrega",
+  "name": "segunda-entrega",
   "version": "1.0.0",
-  "description": "Primera entrega del curso backend 2",
+  "description": "Segunda entrega (entrega final) del curso backend 2",
   "main": "app.js",
   "type": "module",
   "scripts": {
@@ -11,10 +11,12 @@
   "keywords": [],
   "author": "Nicolas D. Cabrera",
   "license": "ISC",
-   "dependencies": {
+  "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "dot": "^1.1.3",
     "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
