--- a/Segunda entrega/package.json
+++ b/Segunda entrega/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/app.js"
+    "start": "nodemon ./src/app.js --mongo",
+    "dev:memory": "nodemon ./src/app.js --memory"
   },
   "keywords": [],
   "author": "Nicolas D. Cabrera",
