--- a/Segunda entrega/package.json
+++ b/Segunda entrega/package.json
@@ -21,11 +21,12 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
+    "mongoose-aggregate-paginate-v2": "^1.1.2",
+    "mongoose-paginate-v2": "^1.8.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "mongoose-aggregate-paginate-v2": "^1.1.2",
-    "mongoose-paginate-v2": "^1.8.3"
+    "uuid": "^10.0.0"
   }
 }
